# GoldAssayTracker

./: Procfile  README.md  ai_assistant.py  ai_chat.py  ai_utils.py  anthropic_assistant.py  app.py  auth.py  chat_component.py  claude_assistant.py  database.py  database_interlab.py  database_trainee.py  deepseek_assistant.py  deploy_app.py  gold_assay.db  health_check.py  init_sample_data.py  main.py  manifest.json  models.py  openai_assistant.py  pyproject.toml  replit.nix  run_app.py  simple_chat.py  startup.py  streamlit_health.py  user_management.py  utils.py
attached_assets/: Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-YAxis-titlefont-1746311123016.txt  Pasted-pandas-errors-DatabaseError-Execution-failed-on-sql-WITH-eval-stats-AS-SELECT-e-trainee-id-COU-1746295129266.txt  Pasted-pandas-errors-DatabaseError-Execution-failed-on-sql-WITH-eval-stats-AS-SELECT-e-trainee-id-COU-1746295330844.txt  Pasted-pandas-errors-DatabaseError-Execution-failed-on-sql-WITH-internal-results-AS-SELECT-ar-sample-i-1745502302658.txt  Pasted-streamlit-errors-StreamlitAPIException-Columns-can-only-be-placed-inside-other-columns-up-to-one-le-1745420425750.txt  Pasted-streamlit-errors-StreamlitAPIException-st-session-state-batch-test-date-cannot-be-modified-after-th-1749740097402_1749740097403.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-toggle-1745425191104.txt
pages/: 01_Data_Entry.py  02_Daily_Monitoring.py  03_Analytics.py  04_Data_Export.py  05_AI_Assistant.py  06_Settings.py  (+5 more)
